# Brisk

./: .gitignore  .gitmodules  3reads.fa  Accessions_List.7z  Brisk.cpp  Brisk.hpp  Brisk2.cpp  Brisk2.hpp  CMakeLists.txt  DenseMenuYo.cpp  DenseMenuYo.hpp  Kmers.cpp  Kmers.hpp  README.md  SuperKmerCount.hpp  SuperKmerLight.cpp  SuperKmerLight.hpp  buckets.cpp  buckets.hpp  common.hpp  counter.cpp  debug.sh  main.cpp  makefile  parameters.hpp  pow2.hpp  utils.cpp  utils.hpp
apps/: CMakeLists.txt  colorer.cpp  counter.cpp
brisk/: Brisk.hpp  CMakeLists.txt  Decycling.cpp  Decycling.h  DenseMenuYo.hpp  Kmers.cpp  Kmers.hpp  Makefile  SuperKmerLight.hpp  buckets.hpp  cmake_install.cmake  common.hpp  hashing.cpp  hashing.hpp  parameters.hpp  pow2.hpp  strict_fstream.hpp  writer.hpp  zstr.hpp
data/: test.fa
data/debug/: test.fa
unused/: DenseMenu.hpp  SparseMenu.hpp  SuperKmerCount.cpp
